--- a/index.html
+++ b/index.html
@@ -99,7 +99,46 @@
         <p>Ejercicios a desarrollar 16-09-23</p>
         <img src="./assets/ejercicios.png" alt="Ejercicios" srcset="">
         <hr>
+        <h3>📒 Sesi&oacute;n 06</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 07</h3>
+        <p>primer parcial</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 08</h3>
+        <p>BB foro de discusi&oacute;n</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 09</h3>
+        <p>BB Edici&oacute;n de color</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 10</h3>
+        <p>BB Foro de dicusi&oacute;n</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 11</h3>
+        <p>BB Filtros, estilos y ajuste de capas 1/2</p>
+        <p>Nave espacial creado a partir de objetos cotidianos</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 12</h3>
+        <p>BB Filtros, estilos y ajuste de capas 2/2</p>
+        <p>retato </p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 13</h3>
+        <p>Examen segundo parcial</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 14</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 15</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 16</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 17</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 18</h3>
+        <hr>
+        <h3>📒 Sesi&oacute;n 19</h3>
+        <p>Tercer parcial</p>
+        <hr>
         <h3>📒 Recursos</h3>
+
         <p>Pantallazos de Photoshop y su explicaci&oacute;n <a href="./html/photoshop.html"> aqu&iacute;</a></p>
         <p>Pantallazos de GIMP y su explicaci&oacute;n<a href="./html/gimp.html"> aqu&iacute;</a>.</p>
         <!--<img id="myImg" src="./assets/gimp_inicio.png" alt="Snow" style="width:100%;max-width:300px">-->
