--- a/index.html
+++ b/index.html
@@ -115,27 +115,36 @@
         <hr>
         <h3>📒 Sesi&oacute;n 11</h3>
         <p>BB Filtros, estilos y ajuste de capas 1/2</p>
-        <p>Nave espacial creado a partir de objetos cotidianos</p>
+        <p>Nave espacial creado a partir de objetos cotidianos.</p>
         <hr>
         <h3>📒 Sesi&oacute;n 12</h3>
         <p>BB Filtros, estilos y ajuste de capas 2/2</p>
-        <p>retato </p>
+        <p>retrato </p>
         <hr>
         <h3>📒 Sesi&oacute;n 13</h3>
         <p>Examen segundo parcial</p>
         <hr>
         <h3>📒 Sesi&oacute;n 14</h3>
+        <p>BB Proyecto integrador 1/2 Actividad 11</p>
         <hr>
         <h3>📒 Sesi&oacute;n 15</h3>
+        <p>BB Proyecto integrador 2/2 Actividad 11</p>
         <hr>
         <h3>📒 Sesi&oacute;n 16</h3>
+        <p>BB Proyecto integrador 1/2 Actividad 12</p>
+        <p></p>
         <hr>
         <h3>📒 Sesi&oacute;n 17</h3>
+        <p>BB Proyecto integrador 2/2 Actividad 12</p>
         <hr>
         <h3>📒 Sesi&oacute;n 18</h3>
+        <p>Foro de discusi&oacute;n</p>
         <hr>
         <h3>📒 Sesi&oacute;n 19</h3>
         <p>Tercer parcial</p>
+        <hr>
+        <h3>📒 Sesi&oacute;n 20</h3>
+        <p>Examen Final</p>
         <hr>
         <h3>📒 Recursos</h3>
 
